# Heartense

./: .env.example  .gitignore  README.md  compose.yaml  init.js
heartense.api/: .env.example  Containerfile  app.py  pyproject.toml
heartense.serverless/: Pipfile  api.py  vercel.json
heartense.serverless/api/: index.py
heartense.ui/: Containerfile  README.md  next.config.js  package-lock.json  package.json
heartense.ui/actions/: colour.ts  endpoints.ts  fetcher.ts
heartense.ui/components/: Device.tsx  Graph.tsx  NavBar.tsx
heartense.ui/hooks/: useDeviceData  useDeviceData.ts  useSensorData.ts
heartense.ui/pages/: index.tsx
heartense.ui/styles/: globals.css
heartense.ui/types/: deviceColours.ts  sensorReading.ts
