[tool.poetry]
name = "heartense-serverless"
version = "0.1.0"
description = ""
authors = ["losuler <losuler@posteo.net>"]
readme = "README.md"
packages = [{include = "heartense"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^3.0.10"
pymongo = "^4.3.3"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
